<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13189.4" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="1jz-NH-HxR">
    <device id="retina4_7" orientation="portrait">
        <adaptation id="fullscreen"/>
    </device>
    <dependencies>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13165.3"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Navigation Controller-->
        <scene sceneID="Mfy-ol-D2q">
            <objects>
                <navigationController id="1jz-NH-HxR" sceneMemberID="viewController">
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" translucent="NO" largeTitles="YES" id="USZ-m5-DP0">
                        <rect key="frame" x="0.0" y="20" width="375" height="96"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <connections>
                        <segue destination="sc8-r8-OPl" kind="relationship" relationship="rootViewController" id="8PG-Ha-sfS"/>
                    </connections>
                </navigationController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="7Hj-mt-LRP" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="-606" y="208"/>
        </scene>
        <!--目次-->
        <scene sceneID="b7l-la-dhY">
            <objects>
                <viewController storyboardIdentifier="ChaptersListViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="sc8-r8-OPl" customClass="ChaptersListViewController" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="ebp-kY-kGk">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="551"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="CYh-NJ-OOA">
                                <rect key="frame" x="0.0" y="0.0" width="375" height="551"/>
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                <prototypes>
                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="Cell" textLabel="C94-Oe-3gw" detailTextLabel="6c9-JA-LDb" rowHeight="60" style="IBUITableViewCellStyleSubtitle" id="TbC-QN-Oes">
                                        <rect key="frame" x="0.0" y="28" width="375" height="60"/>
                                        <autoresizingMask key="autoresizingMask"/>
                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="TbC-QN-Oes" id="DB0-R1-6kA">
                                            <rect key="frame" x="0.0" y="0.0" width="342" height="59.5"/>
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="C94-Oe-3gw">
                                                    <rect key="frame" x="15" y="10" width="33.5" height="20.5"/>
                                                    <autoresizingMask key="autoresizingMask"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="chapter-item-title" label="Chapter Title"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                    <nil key="textColor"/>
                                                    <nil key="highlightedColor"/>
                                                </label>
                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Subtitle" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="6c9-JA-LDb">
                                                    <rect key="frame" x="15" y="33.5" width="44" height="14.5"/>
                                                    <autoresizingMask key="autoresizingMask"/>
                                                    <accessibility key="accessibilityConfiguration" label="chapter-author"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                    <nil key="textColor"/>
                                                    <nil key="highlightedColor"/>
                                                </label>
                                            </subviews>
                                        </tableViewCellContentView>
                                        <accessibility key="accessibilityConfiguration" identifier="chapter-item" label="Chapter Item">
                                            <bool key="isElement" value="YES"/>
                                        </accessibility>
                                    </tableViewCell>
                                </prototypes>
                                <connections>
                                    <outlet property="dataSource" destination="sc8-r8-OPl" id="HJp-H7-7GF"/>
                                    <outlet property="delegate" destination="sc8-r8-OPl" id="rpt-ao-Ltv"/>
                                </connections>
                            </tableView>
                        </subviews>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                        <constraints>
                            <constraint firstItem="CYh-NJ-OOA" firstAttribute="leading" secondItem="2ve-Pp-UXf" secondAttribute="leading" id="QJ8-KF-P2w"/>
                            <constraint firstItem="2ve-Pp-UXf" firstAttribute="trailing" secondItem="CYh-NJ-OOA" secondAttribute="trailing" id="WaZ-Oz-ERm"/>
                            <constraint firstItem="CYh-NJ-OOA" firstAttribute="top" secondItem="2ve-Pp-UXf" secondAttribute="top" id="YMQ-cf-Zgc"/>
                            <constraint firstItem="2ve-Pp-UXf" firstAttribute="bottom" secondItem="CYh-NJ-OOA" secondAttribute="bottom" id="jJn-3J-koY"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="2ve-Pp-UXf"/>
                    </view>
                    <navigationItem key="navigationItem" title="目次" id="x9P-LH-9ok"/>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="9Xf-GA-BMi" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="190" y="207"/>
        </scene>
        <!--詳細-->
        <scene sceneID="YBR-ji-qks">
            <objects>
                <viewController storyboardIdentifier="ChapterViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="LGv-rG-l2r" customClass="ChapterViewController" customModule="sample" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="L2V-uS-olx">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="603"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="z1A-YN-NK7">
                                <rect key="frame" x="16" y="16" width="61.5" height="31.5"/>
                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Author Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RCw-eM-01c">
                                <rect key="frame" x="204.5" y="95.5" width="90.5" height="18"/>
                                <fontDescription key="fontDescription" style="UICTFontTextStyleSubhead"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" editable="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="q3f-oG-004">
                                <rect key="frame" x="8" y="121.5" width="359" height="170"/>
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor</string>
                                <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                            </textView>
                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="EII-SC-DUz">
                                <rect key="frame" x="311" y="65.5" width="48" height="48"/>
                                <color key="backgroundColor" red="0.94117647058823528" green="0.94117647058823528" blue="0.94117647058823528" alpha="1" colorSpace="calibratedRGB"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="dC9-yj-yfk"/>
                                    <constraint firstAttribute="width" constant="48" id="zjj-DF-L4F"/>
                                </constraints>
                            </imageView>
                        </subviews>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                        <constraints>
                            <constraint firstItem="q3f-oG-004" firstAttribute="top" secondItem="RCw-eM-01c" secondAttribute="bottom" constant="8" id="4e6-Gv-z1c"/>
                            <constraint firstItem="wZ5-jo-ES8" firstAttribute="trailing" secondItem="q3f-oG-004" secondAttribute="trailing" constant="8" id="E2D-LK-YHK"/>
                            <constraint firstItem="z1A-YN-NK7" firstAttribute="leading" secondItem="wZ5-jo-ES8" secondAttribute="leading" constant="16" id="FC9-m7-fUd"/>
                            <constraint firstItem="EII-SC-DUz" firstAttribute="leading" secondItem="RCw-eM-01c" secondAttribute="trailing" constant="16" id="Jtf-gb-Poc"/>
                            <constraint firstItem="RCw-eM-01c" firstAttribute="bottom" secondItem="EII-SC-DUz" secondAttribute="bottom" id="ODT-zC-UdD"/>
                            <constraint firstItem="q3f-oG-004" firstAttribute="leading" secondItem="wZ5-jo-ES8" secondAttribute="leading" constant="8" id="Qfc-Pg-1cW"/>
                            <constraint firstItem="wZ5-jo-ES8" firstAttribute="trailing" secondItem="EII-SC-DUz" secondAttribute="trailing" constant="16" id="XVu-cG-kpm"/>
                            <constraint firstItem="wZ5-jo-ES8" firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="q3f-oG-004" secondAttribute="bottom" constant="16" id="bgU-um-2BW"/>
                            <constraint firstItem="RCw-eM-01c" firstAttribute="top" secondItem="z1A-YN-NK7" secondAttribute="bottom" constant="48" id="eAd-AF-jcf"/>
                            <constraint firstItem="z1A-YN-NK7" firstAttribute="top" secondItem="wZ5-jo-ES8" secondAttribute="top" constant="16" id="jr2-py-7qt"/>
                            <constraint firstItem="wZ5-jo-ES8" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="z1A-YN-NK7" secondAttribute="trailing" constant="16" id="mqf-34-Eej"/>
                            <constraint firstItem="RCw-eM-01c" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="z1A-YN-NK7" secondAttribute="leading" id="rhv-dm-9UW"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="wZ5-jo-ES8"/>
                    </view>
                    <navigationItem key="navigationItem" title="詳細" largeTitleDisplayMode="never" id="2bK-xp-bbU"/>
                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" translucent="NO" prompted="NO"/>
                    <connections>
                        <outlet property="authorNameLabel" destination="RCw-eM-01c" id="bH3-1D-Gv1"/>
                        <outlet property="authorProfileImageView" destination="EII-SC-DUz" id="hoc-sF-ep5"/>
                        <outlet property="leadTextView" destination="q3f-oG-004" id="xNh-Qd-utw"/>
                        <outlet property="titleLabel" destination="z1A-YN-NK7" id="3dc-Xq-uKV"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="qS0-BS-3Gx" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="943" y="207"/>
        </scene>
    </scenes>
</document>
